[project]
name = "ComfyUI_RWKV_Studio"
description = "ComfyUI nodes for RWKV"
version = "1.0.2"
requires-python = ">=3.10"
license = { file = "LICENSE" }

dependencies = [
  "rwkv",
]

[project.urls]
Repository = "https://github.com/No-22-Github/ComfyUI_RWKV_Studio"
Documentation = "https://github.com/No-22-Github/ComfyUI_RWKV_Studio/wiki"
"Bug Tracker" = "https://github.com/No-22-Github/ComfyUI_RWKV_Studio/issues"

[tool.comfy]
PublisherId = "hellono22"
DisplayName = "ComfyUI RWKV Studio"

includes = [
  "requirements.txt",
  "README.md",
]

